# tern-core

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SPEC-TFH-001_Ternary_Fine_Tuning_Harness.docx  pyproject.toml
benchmarks/: RESULTS.md  analyse_per_expert_tolerance.py  bench_coreml_ane.py  bench_day10_pipeline.py  bench_day12_performance.py  bench_day6.py  bench_day8_packing.py  bench_day9_sparsity.py  bench_gemopus_phase2.py  bench_openelm_coreml.py  bench_sparse_ane.py  bench_tinyllama.py  bench_tinyllama_coreml.py  coreml_ane_benchmark.json  coreml_ane_benchmark.md  day12_performance_data.json  day12_performance_results.md  day12_scaling_data.csv  energy_benchmark_cleanroom.md  energy_cleanroom.py  energy_results.json  eval_mixed_precision.py  eval_perplexity.py  eval_sensitivity.py  mistral_7b_issue1_validation_2026-04-29.md  mistral_7b_phase_d_full.md  run_compression_gemma4_31b.py  run_compression_phi4.py  run_compression_qwen3_30b_a3b.py  run_dual_compression_26b_a4b.py  sparse_ane_benchmark.json  sparse_ane_benchmark.md  tn003_turboquant_baseline.py  tq_bench_results.json  tq_bench_results_gemma_4_31b_it_bf16_ternpacked_20260513T055046Z.json  tq_bench_results_gemma_4_e4b_it_20260512T222533Z.json  tq_bench_results_gemma_4_e4b_it_20260512T223645Z.json  tq_bench_results_gemma_4_e4b_it_20260513T000028Z.json  tq_bench_results_llama_3_2_1b_instruct_ternpacked_20260513T041543Z.json  tq_bench_results_llama_3_2_1b_instruct_ternpacked_20260513T042122Z.json  (+4 more)
briefings/: apple_may_2026_talking_points.md
configs/: tinyllama_mixed_precision.json
docs/: TEA_TEMPLATE.md  TEA_TinyLlama_1.1B.md  TN-001_llama70b_compression_analysis.md  TN-002_coreml_ane_export.md  TN-003_additive_compression_landscape.md  backlog.md  (+9 more)
(+127 files in other folders)
